fix(animation): :bug: make threejs model automatically spin on mobile

--- a/apps/joshua-chagani-app/src/app/app.styles.scss
+++ b/apps/joshua-chagani-app/src/app/app.styles.scss
@@ -24,7 +24,7 @@ h2 {
 }
 
 h1 {
-  font-size: 6rem;
+  font-size: 5rem;
   line-height: 1;
 }
 
@@ -60,6 +60,7 @@ h2 a {
 canvas {
   inline-size: 100%;
   block-size: var(--canvas-size);
+  pointer-events: none;
 }
 
 .canvas-loader {
